--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "author": "haizou",
   "license": "ISC",
   "dependencies": {
-    "vitepress-theme-poseidon": "^0.1.7"
+    "vitepress-theme-poseidon": "^0.1.14"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0-beta.1"
+    "vitepress": "^1.0.0-rc.31"
   }
 }
