--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     },
     "dependencies": {
         "@docsearch/js": "^3.4.0",
-        "@giscus/vue": "^2.3.0",
         "@fancyapps/ui": "^5.0.19",
+        "@giscus/vue": "^2.3.0",
+        "@waline/client": "^2.15.8",
         "lazysizes": "^5.3.2",
         "valine": "^1.5.1"
     },
